update swagger definition
