# api/docs/swagger.json
@@ -16,7 +16,29 @@
                 "tags": [
                     "Scan Results"
                 ],
-                "summary": "Get Scan Result List"
+                "summary": "Get Scan Result List",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.GetScanResultListResp"
+                        }
+                    }
+                }
             },
             "post": {
                 "description": "Create Scan Result With ScanResult Payload",
@@ -29,32 +51,28 @@
                 "tags": [
                     "Scan Results"
                 ],
-                "summary": "Create Scan Result"
-            },
-            "patch": {
-                "description": "Update Scan Result",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Scan Results"
-                ],
-                "summary": "Update Scan Result",
+                "summary": "Create Scan Result",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Scan Result ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "body",
+                        "schema": {
+                            "type": "integer"
+                        }
                     }
-                ]
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.CreateScanResultResp"
+                        }
+                    }
+                }
             }
         },
-        "/v1/scan-results/:id": {
+        "/v1/scan-results/{id}": {
             "get": {
                 "description": "Get Scan Result Detail By ID",
                 "consumes": [
@@ -75,7 +93,15 @@
                         "in": "path",
                         "required": true
                     }
-                ]
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.GetScanResultDetailResp"
+                        }
+                    }
+                }
             },
             "delete": {
                 "description": "Delete Scan Result",
@@ -97,7 +123,116 @@
                         "in": "path",
                         "required": true
                     }
-                ]
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.DeleteScanResultResp"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update Scan Result",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Scan Results"
+                ],
+                "summary": "Update Scan Result",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Scan Result ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.UpdateScanResultResp"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "dtos.CreateScanResultResp": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.DeleteScanResultResp": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.GetScanResultDetailResp": {
+            "type": "object",
+            "properties": {
+                "scan_result": {
+                    "$ref": "#/definitions/dtos.ScanResultResp"
+                }
+            }
+        },
+        "dtos.GetScanResultListResp": {
+            "type": "object",
+            "properties": {
+                "scan_results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.ScanResultResp"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dtos.ScanResultResp": {
+            "type": "object",
+            "properties": {
+                "findings": {},
+                "finished_at": {
+                    "type": "string"
+                },
+                "queued_at": {
+                    "type": "string"
+                },
+                "repository_name": {
+                    "type": "string",
+                    "example": "test"
+                },
+                "scanning_at": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "dtos.UpdateScanResultResp": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
             }
         }
     }
