# api/dtos/scanResultDto.go
@@ -25,6 +25,7 @@ type DeleteScanResultDto struct {
 }
 
 type UpdateScanResultDto struct {
+	ID             int         `uri:"id"`
 	Status         int         `json:"status"`
 	RepositoryName string      `json:"repository_name"`
 	Findings       interface{} `json:"findings"`
@@ -35,8 +36,8 @@ type CreateScanResultResp struct {
 }
 
 type ScanResultResp struct {
-	Status         uint8       `json:"status"`
-	RepositoryName string      `json:"repository_name"`
+	Status         uint8       `json:"status" example:"1"`
+	RepositoryName string      `json:"repository_name"  example:"test"`
 	Findings       interface{} `json:"findings"`
 	QueuedAt       time.Time   `json:"queued_at"`
 	ScanningAt     time.Time   `json:"scanning_at"`
